Initial working SCiForest
 Changes to be committed:
	modified:   test_EIF.ipynb
	modified:   test_IsolationForest.ipynb
	new file:   test_SCiF.ipynb
	modified:   turtleIsolationForests/extendedIsolationForest.py
	modified:   turtleIsolationForests/isolationForest.py
	new file:   turtleIsolationForests/sciForest.py

--- a/test_IsolationForest.ipynb
+++ b/test_IsolationForest.ipynb
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -1290,7 +1290,7 @@
        "[125973 rows x 46 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1300,6 +1300,32 @@
     "X_train = pd.DataFrame(scaler.fit_transform(X_train), columns = X_train.columns)\n",
     "X_test = pd.DataFrame(scaler.transform(X_test), columns = X_test.columns)\n",
     "X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4654171925730117"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contamination = sum(train_labels == 0) / len(train_labels)\n",
+    "contamination"
    ]
   },
   {
@@ -1315,36 +1341,10 @@
     {
      "data": {
       "text/plain": [
-       "0.4654171925730117"
+       "<turtleIsolationForests.isolationForest.IsolationForest at 0x217406432b0>"
       ]
      },
      "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "contamination = sum(train_labels == 0) / len(train_labels)\n",
-    "contamination"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<turtleIsolationForests.isolationForest.IsolationForest at 0x17fe52ab490>"
-      ]
-     },
-     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1357,16 +1357,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4242033202076767"
+       "0.41712997989386946"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1379,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -1430,31 +1430,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.475832</td>\n",
+       "      <td>0.473796</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.477824</td>\n",
+       "      <td>0.473595</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.391721</td>\n",
+       "      <td>0.385257</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.423045</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0.423509</td>\n",
+       "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.488784</td>\n",
+       "      <td>0.487929</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -1466,31 +1466,31 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22539</th>\n",
-       "      <td>0.384569</td>\n",
+       "      <td>0.382096</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22540</th>\n",
-       "      <td>0.379498</td>\n",
+       "      <td>0.367975</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22541</th>\n",
-       "      <td>0.419153</td>\n",
+       "      <td>0.415490</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22542</th>\n",
-       "      <td>0.381524</td>\n",
+       "      <td>0.369086</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22543</th>\n",
-       "      <td>0.501638</td>\n",
+       "      <td>0.497005</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -1501,22 +1501,22 @@
       ],
       "text/plain": [
        "       anomaly_score  predicted_as_anomaly  is_normal\n",
-       "0           0.475832                  True          0\n",
-       "1           0.477824                  True          0\n",
-       "2           0.391721                 False          1\n",
-       "3           0.423045                 False          0\n",
-       "4           0.488784                  True          0\n",
+       "0           0.473796                  True          0\n",
+       "1           0.473595                  True          0\n",
+       "2           0.385257                 False          1\n",
+       "3           0.423509                  True          0\n",
+       "4           0.487929                  True          0\n",
        "...              ...                   ...        ...\n",
-       "22539       0.384569                 False          1\n",
-       "22540       0.379498                 False          1\n",
-       "22541       0.419153                 False          0\n",
-       "22542       0.381524                 False          1\n",
-       "22543       0.501638                  True          0\n",
+       "22539       0.382096                 False          1\n",
+       "22540       0.367975                 False          1\n",
+       "22541       0.415490                 False          0\n",
+       "22542       0.369086                 False          1\n",
+       "22543       0.497005                  True          0\n",
        "\n",
        "[22544 rows x 3 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1564,37 +1564,37 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.421797</td>\n",
+       "      <td>0.414997</td>\n",
        "      <td>0.430758</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.044103</td>\n",
+       "      <td>0.044046</td>\n",
        "      <td>0.495193</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>0.375138</td>\n",
+       "      <td>0.364777</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>0.380856</td>\n",
+       "      <td>0.378128</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>0.407547</td>\n",
+       "      <td>0.401462</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>0.470607</td>\n",
+       "      <td>0.454601</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>0.531569</td>\n",
+       "      <td>0.535724</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1604,16 +1604,16 @@
       "text/plain": [
        "       anomaly_score     is_normal\n",
        "count   22544.000000  22544.000000\n",
-       "mean        0.421797      0.430758\n",
-       "std         0.044103      0.495193\n",
-       "min         0.375138      0.000000\n",
-       "25%         0.380856      0.000000\n",
-       "50%         0.407547      0.000000\n",
-       "75%         0.470607      1.000000\n",
-       "max         0.531569      1.000000"
+       "mean        0.414997      0.430758\n",
+       "std         0.044046      0.495193\n",
+       "min         0.364777      0.000000\n",
+       "25%         0.378128      0.000000\n",
+       "50%         0.401462      0.000000\n",
+       "75%         0.454601      1.000000\n",
+       "max         0.535724      1.000000"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1624,16 +1624,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.41155074520936835"
+       "0.42938254080908445"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1657,8 +1657,8 @@
      "output_type": "stream",
      "text": [
       "precision: 0.5\n",
-      "recall: 0.7482798833819242\n",
-      "f1-score: 0.5994488041853513\n"
+      "recall: 0.7361748508490134\n",
+      "f1-score: 0.5955264745463826\n"
      ]
     }
    ],
@@ -1716,31 +1716,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.388753</td>\n",
+       "      <td>0.385860</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.423564</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0.419684</td>\n",
+       "      <td>True</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.429684</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0.415750</td>\n",
+       "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.399791</td>\n",
+       "      <td>0.399249</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.377386</td>\n",
+       "      <td>0.368618</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -1752,31 +1752,31 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>125968</th>\n",
-       "      <td>0.433742</td>\n",
+       "      <td>0.417954</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>125969</th>\n",
-       "      <td>0.377467</td>\n",
+       "      <td>0.367198</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>125970</th>\n",
-       "      <td>0.406774</td>\n",
+       "      <td>0.404088</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>125971</th>\n",
-       "      <td>0.430026</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0.417110</td>\n",
+       "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>125972</th>\n",
-       "      <td>0.387836</td>\n",
+       "      <td>0.378414</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -1787,17 +1787,17 @@
       ],
       "text/plain": [
        "        anomaly_score  predicted_as_anomaly  is_normal\n",
-       "0            0.388753                 False          1\n",
-       "1            0.423564                 False          1\n",
-       "2            0.429684                  True          0\n",
-       "3            0.399791                 False          1\n",
-       "4            0.377386                 False          1\n",
+       "0            0.385860                 False          1\n",
+       "1            0.419684                  True          1\n",
+       "2            0.415750                 False          0\n",
+       "3            0.399249                 False          1\n",
+       "4            0.368618                 False          1\n",
        "...               ...                   ...        ...\n",
-       "125968       0.433742                  True          0\n",
-       "125969       0.377467                 False          1\n",
-       "125970       0.406774                 False          1\n",
-       "125971       0.430026                  True          0\n",
-       "125972       0.387836                 False          1\n",
+       "125968       0.417954                  True          0\n",
+       "125969       0.367198                 False          1\n",
+       "125970       0.404088                 False          1\n",
+       "125971       0.417110                 False          0\n",
+       "125972       0.378414                 False          1\n",
        "\n",
        "[125973 rows x 3 columns]"
       ]
@@ -1851,37 +1851,37 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.417396</td>\n",
+       "      <td>0.410140</td>\n",
        "      <td>0.534583</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.035944</td>\n",
+       "      <td>0.035078</td>\n",
        "      <td>0.498805</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>0.375138</td>\n",
+       "      <td>0.364777</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>0.383300</td>\n",
+       "      <td>0.381111</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>0.418021</td>\n",
+       "      <td>0.412755</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>0.433320</td>\n",
+       "      <td>0.422732</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>0.566379</td>\n",
+       "      <td>0.562701</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1891,13 +1891,13 @@
       "text/plain": [
        "       anomaly_score      is_normal\n",
        "count  125973.000000  125973.000000\n",
-       "mean        0.417396       0.534583\n",
-       "std         0.035944       0.498805\n",
-       "min         0.375138       0.000000\n",
-       "25%         0.383300       0.000000\n",
-       "50%         0.418021       1.000000\n",
-       "75%         0.433320       1.000000\n",
-       "max         0.566379       1.000000"
+       "mean        0.410140       0.534583\n",
+       "std         0.035078       0.498805\n",
+       "min         0.364777       0.000000\n",
+       "25%         0.381111       0.000000\n",
+       "50%         0.412755       1.000000\n",
+       "75%         0.422732       1.000000\n",
+       "max         0.562701       1.000000"
       ]
      },
      "execution_count": 16,
@@ -1919,8 +1919,8 @@
      "output_type": "stream",
      "text": [
       "precision: 0.5\n",
-      "recall: 0.8167330677290837\n",
-      "f1-score: 0.6202723146747352\n"
+      "recall: 0.8048154401570372\n",
+      "f1-score: 0.616804043995813\n"
      ]
     }
    ],
@@ -1947,7 +1947,7 @@
     {
      "data": {
       "text/plain": [
-       "0.46521079913949814"
+       "0.4654092543640304"
       ]
      },
      "execution_count": 18,
