--- a/test_SCiF.ipynb
+++ b/test_SCiF.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from turtleIsolationForests.extendedIsolationForest import IsolationForest, ExtendedIsolationForest\n",
+    "from turtleIsolationForests.sciForest import SCIsolationForest\n",
     "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
        "[125973 rows x 47 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
        "[125973 rows x 46 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +868,7 @@
        "0.4654171925730117"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,38 +880,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<turtleIsolationForests.extendedIsolationForest.ExtendedIsolationForest at 0x2e0af6df1f0>"
+       "<turtleIsolationForests.sciForest.SCIsolationForest at 0x1fe45445de0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = ExtendedIsolationForest(contamination = contamination, random_state = None)\n",
+    "model = SCIsolationForest(num_hyperplanes_per_split = 5, contamination = contamination, random_state = None)\n",
     "model.fit(X_train)\n",
     "model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4059706562566239"
+       "0.342846741487891"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -963,31 +963,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.440963</td>\n",
+       "      <td>0.388364</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.435630</td>\n",
+       "      <td>0.383526</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.378411</td>\n",
+       "      <td>0.333862</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.421496</td>\n",
+       "      <td>0.374425</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.445952</td>\n",
+       "      <td>0.477417</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -999,31 +999,31 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22539</th>\n",
-       "      <td>0.366659</td>\n",
+       "      <td>0.325480</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22540</th>\n",
-       "      <td>0.367873</td>\n",
+       "      <td>0.321938</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22541</th>\n",
-       "      <td>0.393330</td>\n",
+       "      <td>0.328320</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22542</th>\n",
-       "      <td>0.375472</td>\n",
+       "      <td>0.333097</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22543</th>\n",
-       "      <td>0.467221</td>\n",
+       "      <td>0.433754</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -1034,22 +1034,22 @@
       ],
       "text/plain": [
        "       anomaly_score  predicted_as_anomaly  is_normal\n",
-       "0           0.440963                  True          0\n",
-       "1           0.435630                  True          0\n",
-       "2           0.378411                 False          1\n",
-       "3           0.421496                  True          0\n",
-       "4           0.445952                  True          0\n",
+       "0           0.388364                  True          0\n",
+       "1           0.383526                  True          0\n",
+       "2           0.333862                 False          1\n",
+       "3           0.374425                  True          0\n",
+       "4           0.477417                  True          0\n",
        "...              ...                   ...        ...\n",
-       "22539       0.366659                 False          1\n",
-       "22540       0.367873                 False          1\n",
-       "22541       0.393330                 False          0\n",
-       "22542       0.375472                 False          1\n",
-       "22543       0.467221                  True          0\n",
+       "22539       0.325480                 False          1\n",
+       "22540       0.321938                 False          1\n",
+       "22541       0.328320                 False          0\n",
+       "22542       0.333097                 False          1\n",
+       "22543       0.433754                  True          0\n",
        "\n",
        "[22544 rows x 3 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1097,37 +1097,37 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.405882</td>\n",
+       "      <td>0.376084</td>\n",
        "      <td>0.430758</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.036796</td>\n",
+       "      <td>0.071161</td>\n",
        "      <td>0.495193</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>0.363172</td>\n",
+       "      <td>0.320993</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>0.371369</td>\n",
+       "      <td>0.325872</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>0.398483</td>\n",
+       "      <td>0.343596</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>0.435630</td>\n",
+       "      <td>0.389407</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>0.638576</td>\n",
+       "      <td>0.752304</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1137,16 +1137,16 @@
       "text/plain": [
        "       anomaly_score     is_normal\n",
        "count   22544.000000  22544.000000\n",
-       "mean        0.405882      0.430758\n",
-       "std         0.036796      0.495193\n",
-       "min         0.363172      0.000000\n",
-       "25%         0.371369      0.000000\n",
-       "50%         0.398483      0.000000\n",
-       "75%         0.435630      1.000000\n",
-       "max         0.638576      1.000000"
+       "mean        0.376084      0.430758\n",
+       "std         0.071161      0.495193\n",
+       "min         0.320993      0.000000\n",
+       "25%         0.325872      0.000000\n",
+       "50%         0.343596      0.000000\n",
+       "75%         0.389407      1.000000\n",
+       "max         0.752304      1.000000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1165,8 +1165,8 @@
      "output_type": "stream",
      "text": [
       "precision: 0.5\n",
-      "recall: 0.7559050480061259\n",
-      "f1-score: 0.60188073071782\n"
+      "recall: 0.7322264064817985\n",
+      "f1-score: 0.5942304130394518\n"
      ]
     }
    ],
@@ -1187,12 +1187,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#beat f1 of .59?"
-   ]
+   "source": []
   }
  ],
  "metadata": {
